.provarCaches/00D5f000005vwGkEAI/objects/rstk__wctrdsptch__c.object
<CustomObject>
    <description>wctrdsptch__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_date__c</fullName>
        <inlineHelpText>User specified Date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_days__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number Days</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwctrdsptchs</relationshipLabel>
        <relationshipName>divwctrdsptchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_hpdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total available Labor Hours per day for this Work Center.</inlineHelpText>
        <label>Hrs Per Day Labor</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_hpdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total available Machine Hours per day for this Work Center.</inlineHelpText>
        <label>Hrs Per Day Machine</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_inc0qtyavail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the system will include Work Orders which are scheduled for this Work Center, but have not yet arrived.</inlineHelpText>
        <label>Include Qty Available = 0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_printable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Printable Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wctrdsptch_wctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Specific Work Center</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Work Center Dispatch List</relationshipLabel>
        <relationshipName>Work_Center_Dispatch_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Center Dispatch List</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Center Dispatch Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>